# TBDTracker

./: .gitignore  README.md  detect.py  pyproject.toml  run_custom_dataset_eval.py  track.py
cfg/data_cfg/: AntiUAV-val.yaml  dancetrack-val.yaml  mot20-half-val.yaml  snmot.yaml
cfg/eval_cfg/: AntiUAV.yaml  DanceTrack.yaml  SNMOT.yaml
configs/data_cfg/: mot17-half-val.yaml
configs/eval_cfg/: AntiUAV.yaml  DanceTrack.yaml
configs/tracker_cfg/: botsort.py  bytetrack.py  hybridsort.py  improassoc.py  ocsort.py  sort.py  sparsetrack.py  tracktrack.py
scripts/: antiuav_detect.sh  dance_detect.sh  eval.sh  mot17_detect.sh  mot20_detect.sh  track_from_fold_antiuav.sh  track_from_fold_antiuav_byte_kf.sh  track_from_fold_antiuav_sort_kf.sh  track_from_fold_dance.sh  track_from_fold_dance_byte_kf.sh  track_from_fold_dance_byte_lakf.sh  track_from_fold_dance_ocsort_kf.sh  track_from_fold_dance_sort_kf.sh  track_from_fold_dance_sort_lakf.sh  track_from_fold_snmot.sh  track_from_fold_snomt_byte_kf.sh  track_from_fold_snomt_byte_lakf.sh  track_from_fold_snomt_ocsort_kf.sh  track_from_fold_snomt_sort_kf.sh  track_from_fold_snomt_sort_lakf.sh
scripts/dancetrack/: dance_detect.sh  track_from_fold_bot.sh  track_from_fold_byte.sh  track_from_fold_hybridsort.sh  track_from_fold_improassoc.sh  track_from_fold_ocsort.sh  track_from_fold_sort.sh  track_from_fold_sparsetrack.sh  track_from_fold_tracktrack.sh
scripts/snmot/: track_from_fold_byte.sh  track_from_fold_hybridsort.sh  track_from_fold_ocsort.sh  track_from_fold_sort.sh  track_from_fold_sparsetrack.sh
tools/: convert_StandardMOT_to_yolo.py  half_dataset.py
tracker/: __init__.py
tracker/accelerations/: tensorrt_tools.py
tracker/data/: dataset.py
tracker/detectors/: model.py
tracker/detectors/ul_yolo_utils/: postprocess.py  train_ul_det.py
tracker/detectors/yolox_utils/: mot_dataset.py  postprocess.py  train_yolox.py  yolox_m.py  yolox_s_mix_det.py  yolox_x.py  yolox_x_ablation.py  yolox_x_mix_mot20_ch.py
tracker/evaluator/: custom_dataset.py
tracker/trackers/: basetrack.py  basetracker.py  botsort_tracker.py  byte_tracker.py  c_biou_tracker.py  deepsort_tracker.py  hybridsort_tracker.py  improassoc_tracker.py  matching.py  ocsort_tracker.py  sort_tracker.py  sparse_tracker.py  strongsort_tracker.py  tracklet.py  tracktrack_tracker copy.py  tracktrack_tracker.py  ucmc_tracker.py
tracker/trackers/camera_motion_compensation/: cmc.py
tracker/trackers/motion_models/: base_kalman.py  base_knet.py  base_lakf.py  botsort_kalman.py  bytetrack_kalman.py  bytetrack_knet.py  hybridsort_kalman.py  ocsort_kalman.py  sort_kalman.py  strongsort_kalman.py  tracktrack_kalman.py  ucmctrack_kalman.py
tracker/trackers/reid_models/: AFLink.py  DeepsortReID.py  MobileNetv2.py  OSNet.py  ShuffleNetv2.py  VehicleNet.py  __init__.py  engine.py
tracker/utils/: general.py  tools.py  torch_utils.py  visualization.py
